--- a/pom.xml
+++ b/pom.xml
@@ -91,8 +91,7 @@
 				<sonar.host.url>
 					http://localhost:9000
 				</sonar.host.url>
-				<sonar.login>admin</sonar.login>
-				<sonar.password>Aayushi12@#</sonar.password>
+				<sonar.token>sqp_dfa784916f7c49f3d0e3948565534349d1edcad3</sonar.token>
 				<!---<sonar.analysis.mode>incremental</sonar.analysis.mode>-->
 				<sonar.issuesReport.html.enable>true</sonar.issuesReport.html.enable>
 			</properties>
